samples/_failures_safe/1761713288_38a8f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ebe9d3f4.c: In function ‘main’:
./samples/SAFE/__tmp_ebe9d3f4.c:150:5: error: expected declaration or statement at end of input
  150 |     }
      |     ^
